@@ -1,17 +1,17 @@
-/*
- *  Copyright 2005 The Apache Software Foundation
+/**
+ *    Copyright 2006-2019 the original author or authors.
  *
- *  Licensed under the Apache License, Version 2.0 (the "License");
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
+ *    Licensed under the Apache License, Version 2.0 (the "License");
+ *    you may not use this file except in compliance with the License.
+ *    You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *       http://www.apache.org/licenses/LICENSE-2.0
  *
- *  Unless required by applicable law or agreed to in writing, software
- *  distributed under the License is distributed on an "AS IS" BASIS,
- *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- *  See the License for the specific language governing permissions and
- *  limitations under the License.
+ *    Unless required by applicable law or agreed to in writing, software
+ *    distributed under the License is distributed on an "AS IS" BASIS,
+ *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *    See the License for the specific language governing permissions and
+ *    limitations under the License.
  */
 package org.mybatis.generator.internal;
 
@@ -23,85 +23,83 @@ import java.util.ArrayList;
 import java.util.List;
 
 import org.mybatis.generator.api.CommentGenerator;
+import org.mybatis.generator.api.ConnectionFactory;
 import org.mybatis.generator.api.FullyQualifiedTable;
-import org.mybatis.generator.api.JavaFormatter;
-import org.mybatis.generator.api.Plugin;
 import org.mybatis.generator.api.IntrospectedColumn;
 import org.mybatis.generator.api.IntrospectedTable;
+import org.mybatis.generator.api.JavaFormatter;
 import org.mybatis.generator.api.JavaTypeResolver;
+import org.mybatis.generator.api.Plugin;
 import org.mybatis.generator.api.XmlFormatter;
 import org.mybatis.generator.api.dom.DefaultJavaFormatter;
 import org.mybatis.generator.api.dom.DefaultXmlFormatter;
-import org.mybatis.generator.codegen.ibatis2.IntrospectedTableIbatis2Java2Impl;
-import org.mybatis.generator.codegen.ibatis2.IntrospectedTableIbatis2Java5Impl;
 import org.mybatis.generator.codegen.mybatis3.IntrospectedTableMyBatis3Impl;
 import org.mybatis.generator.codegen.mybatis3.IntrospectedTableMyBatis3SimpleImpl;
 import org.mybatis.generator.config.CommentGeneratorConfiguration;
+import org.mybatis.generator.config.ConnectionFactoryConfiguration;
 import org.mybatis.generator.config.Context;
-import org.mybatis.generator.config.PluginConfiguration;
 import org.mybatis.generator.config.JavaTypeResolverConfiguration;
+import org.mybatis.generator.config.PluginConfiguration;
 import org.mybatis.generator.config.PropertyRegistry;
 import org.mybatis.generator.config.TableConfiguration;
 import org.mybatis.generator.internal.types.JavaTypeResolverDefaultImpl;
-import org.mybatis.generator.internal.util.StringUtility;
+import org.mybatis.generator.runtime.dynamic.sql.IntrospectedTableMyBatis3DynamicSqlImplV1;
+import org.mybatis.generator.runtime.dynamic.sql.IntrospectedTableMyBatis3DynamicSqlImplV2;
 
 /**
- * This class creates the different objects needed by the generator
- * 
+ * This class creates the different objects needed by the generator.
+ *
  * @author Jeff Butler
  */
 public class ObjectFactory {
+
     private static List<ClassLoader> externalClassLoaders;
-    private static List<ClassLoader> resourceClassLoaders;
-    
+
     static {
-    	externalClassLoaders = new ArrayList<ClassLoader>();
-        resourceClassLoaders = new ArrayList<ClassLoader>();
+        externalClassLoaders = new ArrayList<>();
     }
 
     /**
-     * Utility class. No instances allowed
+     * Utility class. No instances allowed.
      */
     private ObjectFactory() {
         super();
     }
 
     /**
-     * Adds a custom classloader to the collection of classloaders
-     * searched for resources.  Currently, this is only used
-     * when searching for properties files that may be
-     * referenced in the configuration file. 
+     * Clears the class loaders.  This method should be called at the beginning of
+     * a generation run so that and change to the classloading configuration
+     * will be reflected.  For example, if the eclipse launcher changes configuration
+     * it might not be updated if eclipse hasn't been restarted.
      * 
-     * @param classLoader
      */
-    public static synchronized void addResourceClassLoader(
-            ClassLoader classLoader) {
-        ObjectFactory.resourceClassLoaders.add(classLoader);
+    public static void reset() {
+        externalClassLoaders.clear();
     }
 
     /**
-     * Adds a custom classloader to the collection of classloaders
-     * searched for "external" classes.  These are classes that
-     * do not depend on any of the generator's classes or
-     * interfaces.  Examples are JDBC drivers, root classes, root
+     * Adds a custom classloader to the collection of classloaders searched for "external" classes. These are classes
+     * that do not depend on any of the generator's classes or interfaces. Examples are JDBC drivers, root classes, root
      * interfaces, etc.
-     * 
+     *
      * @param classLoader
+     *            the class loader
      */
     public static synchronized void addExternalClassLoader(
             ClassLoader classLoader) {
         ObjectFactory.externalClassLoaders.add(classLoader);
     }
-    
+
     /**
-     * This method returns a class loaded from the context classloader, or the
-     * classloader supplied by a client. This is appropriate for JDBC drivers,
-     * model root classes, etc. It is not appropriate for any class that extends
-     * one of the supplied classes or interfaces.
-     * 
+     * Returns a class loaded from the context classloader, or the classloader supplied by a client. This is
+     * appropriate for JDBC drivers, model root classes, etc. It is not appropriate for any class that extends one of
+     * the supplied classes or interfaces.
+     *
      * @param type
+     *            the type
      * @return the Class loaded from the external classloader
      * @throws ClassNotFoundException
+     *             the class not found exception
      */
     public static Class<?> externalClassForName(String type)
             throws ClassNotFoundException {
@@ -112,12 +110,11 @@ public class ObjectFactory {
             try {
                 clazz = Class.forName(type, true, classLoader);
                 return clazz;
-            } catch (Throwable e) {
+            } catch (Exception e) {
                 // ignore - fail safe below
-                ;
             }
         }
-        
+
         return internalClassForName(type);
     }
 
@@ -126,7 +123,7 @@ public class ObjectFactory {
 
         try {
             Class<?> clazz = externalClassForName(type);
-            answer = clazz.newInstance();
+            answer = clazz.getConstructor().newInstance();
         } catch (Exception e) {
             throw new RuntimeException(getString(
                     "RuntimeError.6", type), e); //$NON-NLS-1$
@@ -156,13 +153,13 @@ public class ObjectFactory {
     public static URL getResource(String resource) {
         URL url;
 
-        for (ClassLoader classLoader : resourceClassLoaders) {
+        for (ClassLoader classLoader : externalClassLoaders) {
             url = classLoader.getResource(resource);
             if (url != null) {
-              return url;
+                return url;
             }
         }
-        
+
         ClassLoader cl = Thread.currentThread().getContextClassLoader();
         url = cl.getResource(resource);
 
@@ -179,7 +176,7 @@ public class ObjectFactory {
         try {
             Class<?> clazz = internalClassForName(type);
 
-            answer = clazz.newInstance();
+            answer = clazz.getConstructor().newInstance();
         } catch (Exception e) {
             throw new RuntimeException(getString(
                     "RuntimeError.6", type), e); //$NON-NLS-1$
@@ -247,9 +244,31 @@ public class ObjectFactory {
         return answer;
     }
 
+    public static ConnectionFactory createConnectionFactory(Context context) {
+
+        ConnectionFactoryConfiguration config = context
+                .getConnectionFactoryConfiguration();
+        ConnectionFactory answer;
+
+        String type;
+        if (config == null || config.getConfigurationType() == null) {
+            type = JDBCConnectionFactory.class.getName();
+        } else {
+            type = config.getConfigurationType();
+        }
+
+        answer = (ConnectionFactory) createInternalObject(type);
+
+        if (config != null) {
+            answer.addConfigurationProperties(config.getProperties());
+        }
+
+        return answer;
+    }
+
     public static JavaFormatter createJavaFormatter(Context context) {
         String type = context.getProperty(PropertyRegistry.CONTEXT_JAVA_FORMATTER);
-        if (!StringUtility.stringHasValue(type)) {
+        if (!stringHasValue(type)) {
             type = DefaultJavaFormatter.class.getName();
         }
 
@@ -259,10 +278,10 @@ public class ObjectFactory {
 
         return answer;
     }
-    
+
     public static XmlFormatter createXmlFormatter(Context context) {
         String type = context.getProperty(PropertyRegistry.CONTEXT_XML_FORMATTER);
-        if (!StringUtility.stringHasValue(type)) {
+        if (!stringHasValue(type)) {
             type = DefaultXmlFormatter.class.getName();
         }
 
@@ -272,7 +291,7 @@ public class ObjectFactory {
 
         return answer;
     }
-    
+
     public static IntrospectedTable createIntrospectedTable(
             TableConfiguration tableConfiguration, FullyQualifiedTable table,
             Context context) {
@@ -285,27 +304,27 @@ public class ObjectFactory {
     }
 
     /**
-     * This method creates an introspected table implementation that is
-     * only usable for validation (i.e. for a context to determine
-     * if the target is ibatis2 or mybatis3).
-     *  
+     * Creates an introspected table implementation that is only usable for validation .
+     * 
+     *
      * @param context
-     * @return
+     *            the context
+     * @return the introspected table
      */
     public static IntrospectedTable createIntrospectedTableForValidation(Context context) {
         String type = context.getTargetRuntime();
         if (!stringHasValue(type)) {
-            type = IntrospectedTableMyBatis3Impl.class.getName();
-        } else if ("Ibatis2Java2".equalsIgnoreCase(type)) { //$NON-NLS-1$
-            type = IntrospectedTableIbatis2Java2Impl.class.getName();
-        } else if ("Ibatis2Java5".equalsIgnoreCase(type)) { //$NON-NLS-1$
-            type = IntrospectedTableIbatis2Java5Impl.class.getName();
-        } else if ("Ibatis3".equalsIgnoreCase(type)) { //$NON-NLS-1$
-            type = IntrospectedTableMyBatis3Impl.class.getName();
+            type = IntrospectedTableMyBatis3DynamicSqlImplV2.class.getName();
         } else if ("MyBatis3".equalsIgnoreCase(type)) { //$NON-NLS-1$
             type = IntrospectedTableMyBatis3Impl.class.getName();
         } else if ("MyBatis3Simple".equalsIgnoreCase(type)) { //$NON-NLS-1$
             type = IntrospectedTableMyBatis3SimpleImpl.class.getName();
+        } else if ("MyBatis3DynamicSql".equalsIgnoreCase(type)) { //$NON-NLS-1$
+            type = IntrospectedTableMyBatis3DynamicSqlImplV2.class.getName();
+        } else if ("MyBatis3DynamicSqlV1".equalsIgnoreCase(type)) { //$NON-NLS-1$
+            type = IntrospectedTableMyBatis3DynamicSqlImplV1.class.getName();
+        } else if ("MyBatis3DynamicSqlV2".equalsIgnoreCase(type)) { //$NON-NLS-1$
+            type = IntrospectedTableMyBatis3DynamicSqlImplV2.class.getName();
         }
 
         IntrospectedTable answer = (IntrospectedTable) createInternalObject(type);
@@ -313,7 +332,7 @@ public class ObjectFactory {
 
         return answer;
     }
-    
+
     public static IntrospectedColumn createIntrospectedColumn(Context context) {
         String type = context.getIntrospectedColumnImpl();
         if (!stringHasValue(type)) {
